# rust_simple_web_project

./: Cargo.toml  README.MD  Rocket.toml
docker/: docker-compose.yml
src/: main.rs
