[package]
name = "web_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rocket = { version = "0.5.0", features=["json"] }
serde = "1.0.194"
sqlx = { version = "0.7.3", default-features = false, features = ["macros"] }

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_postgres"]
